--- a/web/css/desktop/public-2/application.css
+++ b/web/css/desktop/public-2/application.css
@@ -1418,7 +1418,11 @@ input[type="radio"] .styled:checked + label::after {
   .header-item span {
     margin-right: 15px;
     float: right;
-    text-transform: capitalize; }
+    text-transform: initial;
+    max-width: 115px;
+    text-align: right;
+    max-height: 80px;
+    overflow: hidden; }
 
 .menu-logued li {
   padding: 0;
